# ApkDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zh/apkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zh/apkdemo/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/zh/apkdemo/: ExampleUnitTest.java
camera2demo/: build.gradle
camera2demo/src/androidTest/java/com/zh/camera2demo/: ExampleInstrumentedTest.java
camera2demo/src/main/: AndroidManifest.xml
camera2demo/src/main/java/com/zh/camera2demo/: AutoFitTextureView.java  CameraFragment.java  MainActivity.java
camera2demo/src/main/res/layout/: fragment_camera.xml
camera2demo/src/test/java/com/zh/camera2demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jninativedemo/: CMakeLists.txt  build.gradle
jninativedemo/src/androidTest/java/com/zh/jninativedemo/: ExampleInstrumentedTest.java
jninativedemo/src/main/: AndroidManifest.xml
jninativedemo/src/main/cpp/src/: native-lib.cpp
jninativedemo/src/main/java/com/zh/jninativedemo/: MainActivity.java  NativeFunc.java  Person.java
jninativedemo/src/main/res/values/: strings.xml
jninativedemo/src/test/java/com/zh/jninativedemo/: ExampleUnitTest.java
